fix video tooltip overlapping

--- a/src/components/RichEditor/RichEditor.scss
+++ b/src/components/RichEditor/RichEditor.scss
@@ -371,6 +371,7 @@
     color: #444;
     padding: 5px 12px;
     white-space: nowrap;
+    z-index: 1;
     a {
       cursor: pointer;
       text-decoration: none;
